--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -11,6 +11,9 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.27.0-rc1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.32" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.32" />
+    <PackageReference Include="RoyT.AStar" Version="3.0.2" />
   </ItemGroup>
 
 </Project>
